--- a/index.html
+++ b/index.html
@@ -1,26 +1,68 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generador de contraseñas</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Generador de contraseñas</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
 <body>
-    <div class="box">
-        <h2>Generador de contraseñas aleatorio</h2>
-        <div class="contenido">
-            <div><input type="text" placeholder="Genere una contraseña" id="password" readonly/></div>
-        
-            <div><p id="caracteres">Cantidad de caracteres</p><input id="number" type="number" min="4" max="20" value="8"></div>
-            <div>
-                <button id="btn1" class="btn" role="button" onclick="genPassword()">Generar</button>
-                <button id="btn2" class="btn" onclick="copyPassword()">Copiar</button>
-            </div>
+  <div class="container-sm">
+    <h1>Generador de contraseñas aleatorio</h1>
+    <form id="form">
+      <div class="m-2 p-2">
+        <span>Cantidad de caracteres</span>
+        <input id="number" class="form-control ms-3" type="number" min="4" max="20" value="8">
+        <div>
+          <span>Caracteres incluidos</span>
+          <div class="form-check-inline ms-3">
+            <input class="form-check-input" type="checkbox" value="numeros" id="numeros" checked>
+            <label class="form-check-label" for="numeros">
+              Números
+            </label>
+          </div>
+          <div class="form-check-inline">
+            <input class="form-check-input" type="checkbox" value="minusculas" id="minusculas">
+            <label class="form-check-label" for="minusculas">
+              Letras minúsculas
+            </label>
+          </div>
+          <div class="form-check-inline">
+            <input class="form-check-input" type="checkbox" value="mayusculas" id="mayusculas">
+            <label class="form-check-label" for="mayusculas">
+              Letras mayúsculas
+            </label>
+          </div>
+          <div class="form-check-inline">
+            <input class="form-check-input" type="checkbox" value="simbolos" id="simbolos">
+            <label class="form-check-label" for="simbolos">
+              Símbolos
+            </label>
+          </div>
+
+        </div>
+        <div class="d-grid gap-2 p-3">
+          <button id="btn1" class="btn btn-primary">Generar</button>
         </div>
         
+      </div>
+    </form>
+    <div class="p-3 divPassword">
+      <input type="text" placeholder="Genere una contraseña" id="password" class="form-control" readonly />
+      <button id="btn2" class="btn btn-primary" onclick="copyPassword()">Copiar</button>
+      <div id="divAlert"></div>
     </div>
-    <script src="app.js"></script>
+  </div>
+  <script src="app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+  </head>
 </body>
+
 </html>
