--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <span>Cantidad de caracteres</span>
         <input id="number" class="form-control ms-3" type="number" min="4" max="20" value="8">
         <div>
-          <span>Caracteres incluidos</span>
-          <div class="form-check-inline ms-3">
+          <span class="me-3">Caracteres incluidos</span>
+          <div class="form-check-inline">
             <input class="form-check-input" type="checkbox" value="numeros" id="numeros" checked>
             <label class="form-check-label" for="numeros">
               Números
@@ -53,7 +53,7 @@
       </div>
     </form>
     <div class="p-3 divPassword">
-      <input type="text" placeholder="Genere una contraseña" id="password" class="form-control" readonly />
+      <input type="text" placeholder="Genere una contraseña" id="password" class="form-control mb-1" readonly />
       <button id="btn2" class="btn btn-primary" onclick="copyPassword()">Copiar</button>
       <div id="divAlert"></div>
     </div>
